# assimp_import-rs

./: .gitignore  Cargo.toml
examples/: print_test.rs
src/: anim.rs  camera.rs  ffi.rs  lib.rs  light.rs  macros.rs  material.rs  mesh.rs  metadata.rs  postprocess.rs  prim.rs  scene.rs  texture.rs
